# tase

./: README.md
Human-Tracking Gimbal/: motor_connection.py  motor_position_control.py  zed_human_follow.py  zed_human_tracking.py
Human-Tracking Gimbal/angle_control_low_level/: angle_control_low_level.ino
Human-Tracking Gimbal/low_level_control_VLM/: low_level_control_VLM.ino
genbot/actor_control/: CMakeLists.txt  package.xml
genbot/actor_control/config/: params.yaml  s1_params.yaml
genbot/actor_control/launch/: actor_control.launch.py
genbot/actor_control/scripts/: actor_control.py
genbot/amfitrack/: CMakeLists.txt  package.xml
genbot/amfitrack/config/: params.yaml
genbot/amfitrack/launch/: amfitrack.launch.py  amfitrack_local.launch.py  amfitrack_offset.launch.py
genbot/amfitrack/scripts/: amfitrack.py  amfitrack_local.py  amfitrack_local_offset.py  amfitrack_offset.py  amfitrack_two_global.py  amfitrack_two_local_not_ok.py
genbot/scout_ros2/scout_base/launch/: scout_mini_base.launch.py  scout_mini_omni_base.launch.py
genbot/scout_ros2/scout_base/src/: scout_base_ros.cpp
genbot/scout_ros2/scout_simulation/: CMakeLists.txt  package.xml
genbot/scout_ros2/scout_simulation/plugin/: CMakeLists.txt  ControlActor.cc  ControlActor.hh  README.md  control_actor.sdf
mppi_controller/: CMakeLists.txt  package.xml  test.py
mppi_controller/config/: params_experiment.yaml
mppi_controller/launch/: mppi_controller.launch.py
mppi_controller/scripts/: mppi_controller_acc.py  mppi_controller_human_acc.py  mppi_controller_vel.py
(+19 files in other folders)
